# phoenix

./: .gitignore  .gitmodules  README.md  aarch64-phoenix.json  rustc-wrapper.sh  test-suite.sh  userspace-aarch64.ld
.githooks/: pre-commit
apps/oom/: Cargo.toml  Makefile  aarch64-phoenix.json  linker.ld
apps/oom/src/: lib.rs
apps/test-executable/: Makefile  linker.ld
apps/test-executable/src/: lib.rs
apps/zork/: Makefile
crypt/src/: lib.rs
crypt/tests/: empty.rs  lorem-ipsum.rs  nist.rs
drivers/graphics/virtio-gpu/: Cargo.toml  Makefile
drivers/graphics/virtio-gpu/src/: api.rs  main.rs  msg.rs
drivers/input/virtio-input/: Cargo.toml
drivers/input/virtio-input/src/: main.rs  msg.rs
drivers/libdriver/: Cargo.toml
drivers/libdriver/src/: lib.rs
drivers/virtio/: Cargo.toml
drivers/virtio/src/: lib.rs
drivers/virtio/src/virtqueue/: future.rs  mod.rs
ideas/: Giving Permissions to Untrusted Code.txt
idl2rust/: Cargo.toml  Makefile
idl2rust/src/: ast.rs  float.rs  lib.rs  parser.rs
kernel/: Cargo.toml  Makefile  Xargo.toml  aarch64-phoenix-eabi.json  build.rs  cargo-check-custom.sh  make.wsl  qemu.wsl  test.wsl
kernel/crates/build-util/: Cargo.toml
kernel/crates/build-util/src/: lib.rs
kernel/crates/collections/: Cargo.toml
kernel/crates/collections/src/: lib.rs
kernel/crates/collections/src/atomic/: linked_list.rs  mod.rs
kernel/crates/devices/: Cargo.toml
kernel/crates/devices/src/: lib.rs  resource.rs  virtio.rs
kernel/crates/devices/src/bus/: mmio.rs  mod.rs
kernel/crates/error/: Cargo.toml
kernel/crates/error/src/: lib.rs
kernel/crates/exec/: Cargo.toml
kernel/crates/exec/src/: lib.rs  segment.rs
kernel/crates/exec/src/elf/: error.rs  headers.rs  mod.rs  segment.rs
kernel/crates/fs/: Cargo.toml
kernel/crates/fs/src/: lib.rs
kernel/crates/hosted/: Cargo.toml
kernel/crates/hosted/src/: lib.rs
kernel/crates/hosted/src/arm/: fs.rs  io.rs  mod.rs
kernel/crates/hosted/src/shim/: fs.rs  io.rs  mod.rs
kernel/crates/i18n/: Cargo.toml
kernel/crates/i18n/src/: boilerplate.rs  en_us.rs  lib.rs  tok.rs
kernel/crates/initrd/: Cargo.toml  README.txt  build.rs
kernel/crates/initrd/contents/aarch64/initrd/: startup  virtio-gpu  virtio-input
kernel/crates/initrd/src/: lib.rs
kernel/crates/int/: Cargo.toml
kernel/crates/int/src/: lib.rs
kernel/crates/int/src/arm/: mod.rs
kernel/crates/int/src/arm/aarch64/: exceptions.rs  mod.rs  syscall.rs
kernel/crates/io/: Cargo.toml
kernel/crates/io/src/: lib.rs  serial.rs  std.rs
kernel/crates/irqs/: Cargo.toml
kernel/crates/irqs/src/: lib.rs
kernel/crates/irqs/src/arm/: mod.rs
kernel/crates/irqs/src/arm/gic/: irq.rs  mod.rs
kernel/crates/locks/: Cargo.toml
kernel/crates/locks/src/: lib.rs  mutex.rs  semaphore.rs
kernel/crates/macros/unreachable/: Cargo.toml
kernel/crates/macros/unreachable/src/: lib.rs
kernel/crates/memory/: Cargo.toml
kernel/crates/memory/src/: allocator.rs  lib.rs
kernel/crates/memory/src/phys/: block.rs  mod.rs  ptr.rs  slab.rs
kernel/crates/memory/src/phys/heap/: mod.rs  node.rs
kernel/crates/memory/src/phys/map/: dtb.rs  mod.rs
kernel/crates/memory/src/virt/: mod.rs
kernel/crates/memory/src/virt/paging/: aarch64.rs  mod.rs
kernel/crates/scheduler/: Cargo.toml
kernel/crates/scheduler/src/: lib.rs  process.rs  thread.rs
kernel/crates/shared/: Cargo.toml
kernel/crates/shared/src/: ffi.rs  fs.rs  lib.rs  once.rs  static_array.rs
kernel/crates/shared/src/sync/: atomic.rs  mod.rs
kernel/crates/std/: Cargo.toml
kernel/crates/std/src/: fmt.rs  fs.rs  lib.rs  panic.rs
kernel/crates/tagged-ptr/: Cargo.toml
kernel/crates/tagged-ptr/src/: lib.rs
kernel/crates/time/: Cargo.toml
kernel/crates/time/src/: lib.rs
kernel/crates/timers/: Cargo.toml
kernel/crates/timers/src/: lib.rs
kernel/crates/timers/src/arm/: generic_timer.rs  mod.rs  pl031.rs
kernel/crates/userspace/: Cargo.toml
kernel/crates/userspace/src/: lib.rs
kernel/src/: gfx_prototype.rs  lib.rs
kernel/src/arch/aarch64/: boot.S  exceptions.S  linker.ld  macros.S  paging.S  scheduler.S  timing.S
kernel/src/arch/aarch64/qemu-virt/: linker.ld
kernel/src/arch/aarch64/raspi3/qemu/: linker.ld
kernel/src/arch/x86_64/: boot.S  linker.ld
libc/: Cargo.toml  Makefile
libc/charmap/: POSIX
libc/include/: ctype.h  errno.h  fcntl.h  iso646.h  limits.h  locale.h  phoenix.h  pthread.h  sched.h  signal.h  stdint.h  stdio.h  stdlib.h  stdnoreturn.h  string.h  time.h  unistd.h  wchar.h  wctype.h
libc/include/phoenix/: locale_t.h
libc/include/sys/: stat.h  types.h  wait.h
libc/src/: crt0.c  ctype.c  errno.c  fcntl.c  locale.c  pthread.c  sched.c  stdio.c  stdiotyp.h  stdlib.c  string.c  unistd.c  wchar.c  wctype.c
libc/tests/: pipe.c  test.h
libdom/: Cargo.toml  Makefile  cargo-check-custom.sh
libdom/src/: AbortSignal.idl  AbstractRange.idl  Attr.idl  CDATASection.idl  CharacterData.idl  Comment.idl  DOMException.idl  DOMHighResTimeStamp.idl  DOMImplementation.idl  DOMTokenList.idl  Document.idl  DocumentFragment.idl  DocumentType.idl  Element.idl  Event.idl  EventHandler.idl  EventTarget.idl  HTMLCollection.idl  NamedNodeMap.idl  Node.idl  NodeFilter.idl  NodeIterator.idl  NodeList.idl  ProcessingInstruction.idl  Range.idl  ShadowRoot.idl  Text.idl  TreeWalker.idl  dom_exception.rs  lib.rs  namespace.rs
libdom/src/node/: attr.rs  cdata_section.rs  character_data.rs  comment.rs  document.rs  document_fragment.rs  document_type.rs  element.rs  mod.rs  named_node_map.rs  processing_instruction.rs  text.rs
libhtml/: Cargo.toml  Xargo.toml
libhtml/src/: interned_string.rs  lib.rs  namespace.rs  shim.rs
libhtml/src/html/: decoder.rs  dom.rs  element.rs  encoding.rs  mod.rs  node.rs  prescan.rs  tokenizer.rs
libphoenix/: Cargo.toml  aarch64-phoenix.json  build.rs  cargo-check-custom.sh
libphoenix/.cargo/: config.toml
libphoenix/clib/: Cargo.toml  aarch64-phoenix.json
libphoenix/src/: allocator.rs  future.rs  lib.rs  panic.rs  posix.rs  process.rs  profiler.rs  serde.rs  syscall.rs  thread.rs
libphoenix/src/ipc/: mod.rs  (+2 more)
(+54 files in other folders)
