[package]
name = "idl2rust"
version = "0.1.0"
authors = ["Jeremy Davis <jeremydavis519@gmail.com>"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
litrs = "0.4"
nom = { version = "7.1", default-features = false, features = ["alloc"] }
proc-macro2 = "1.0"
quote = "1.0"

[features]
intertrait = []
