[workspace]

[package]
name = "phoenix-kernel"
version = "0.1.0"
authors = ["Jeremy Davis <jeremydavis519@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bitflags          = "1.0"
spin              = "0.6"
volatile          = "0.2"

libphoenix = { path = "../libphoenix", default-features = false, features = ["no-start"] }

phoenix-kernel-collections        = { path = "crates/collections" }
phoenix-kernel-error              = { path = "crates/error" }
phoenix-kernel-exec               = { path = "crates/exec" }
phoenix-kernel-fs                 = { path = "crates/fs" }
phoenix-kernel-hosted             = { path = "crates/hosted" }
phoenix-kernel-devices            = { path = "crates/devices" }
phoenix-kernel-i18n               = { path = "crates/i18n" }
phoenix-kernel-initrd             = { path = "crates/initrd" }
phoenix-kernel-int                = { path = "crates/int" }
phoenix-kernel-io                 = { path = "crates/io" }
phoenix-kernel-irqs               = { path = "crates/irqs" }
phoenix-kernel-locks              = { path = "crates/locks" }
phoenix-kernel-macros-unreachable = { path = "crates/macros/unreachable" }
phoenix-kernel-memory             = { path = "crates/memory" }
phoenix-kernel-scheduler          = { path = "crates/scheduler" }
phoenix-kernel-shared             = { path = "crates/shared" }
phoenix-kernel-std                = { path = "crates/std" }
phoenix-kernel-tagged-ptr         = { path = "crates/tagged-ptr" }
phoenix-kernel-time               = { path = "crates/time" }
phoenix-kernel-timers             = { path = "crates/timers" }
phoenix-kernel-userspace          = { path = "crates/userspace" }

[build-dependencies]
phoenix-kernel-build-util = { path = "crates/build-util" }

[features]
# Features that define which user-facing languages should be compiled in.
all_languages  = ["phoenix-kernel-i18n/all_languages"]
language_en_us = ["phoenix-kernel-i18n/language_en_us"]
language_tok   = ["phoenix-kernel-i18n/language_tok"]

# Adds some extra code for testing pieces of the kernel before they're used.
self-test = [
    "phoenix-kernel-collections/self-test",
    "phoenix-kernel-devices/self-test",
    "phoenix-kernel-error/self-test",
    "phoenix-kernel-exec/self-test",
    "phoenix-kernel-fs/self-test",
    "phoenix-kernel-hosted/self-test",
    "phoenix-kernel-i18n/self-test",
    "phoenix-kernel-initrd/self-test",
    "phoenix-kernel-int/self-test",
    "phoenix-kernel-io/self-test",
    "phoenix-kernel-irqs/self-test",
    "phoenix-kernel-locks/self-test",
    "phoenix-kernel-macros-unreachable/self-test",
    "phoenix-kernel-memory/self-test",
    "phoenix-kernel-scheduler/self-test",
    "phoenix-kernel-shared/self-test",
    "phoenix-kernel-std/self-test",
    "phoenix-kernel-tagged-ptr/self-test",
    "phoenix-kernel-time/self-test",
    "phoenix-kernel-timers/self-test",
    "phoenix-kernel-userspace/self-test"
]

# Adds some code that's needed in unit tests (cfg(test) doesn't always work).
unit-test = [
    "phoenix-kernel-collections/unit-test",
    "phoenix-kernel-devices/unit-test",
    "phoenix-kernel-error/unit-test",
    "phoenix-kernel-exec/unit-test",
    "phoenix-kernel-hosted/unit-test",
    "phoenix-kernel-i18n/unit-test",
    "phoenix-kernel-initrd/unit-test",
    "phoenix-kernel-int/unit-test",
    "phoenix-kernel-io/unit-test",
    "phoenix-kernel-irqs/unit-test",
    "phoenix-kernel-locks/unit-test",
    "phoenix-kernel-macros-unreachable/unit-test",
    "phoenix-kernel-memory/unit-test",
    "phoenix-kernel-scheduler/unit-test",
    "phoenix-kernel-shared/unit-test",
    "phoenix-kernel-std/unit-test",
    "phoenix-kernel-tagged-ptr/unit-test",
    "phoenix-kernel-time/unit-test",
    "phoenix-kernel-timers/unit-test",
    "phoenix-kernel-userspace/unit-test"
]

# Adds support for profiling.
profiler = [
    "libphoenix/profiler",
    "phoenix-kernel-memory/profiler"
]
