[package]
name = "libdriver"
version = "0.1.0"
authors = ["Jeremy Davis <jeremydavis519@gmail.com>"]
edition = "2018"

[dependencies]
libphoenix = { path = "../../libphoenix", default-features = false }

[features]
default = ["global-allocator"]

global-allocator = ["libphoenix/global-allocator"]
kernelspace = ["libphoenix/kernelspace"]
