[package]
name = "virtio"
version = "0.1.0"
authors = ["Jeremy Davis <jeremydavis519@gmail.com>"]
edition = "2018"

[dependencies]
bitflags = "1.2"

libdriver = { path = "../libdriver", default-features = false }

[features]
default = ["global-allocator"]

global-allocator = ["libdriver/global-allocator"]
