[package]
name = "libphoenix"
version = "0.1.0"
authors = ["Jeremy Davis <jeremydavis519@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
hashbrown = "0.14"

[features]
default = ["global-allocator"]

global-allocator = []
kernelspace = []
no-start = []
no-std = []
profiler = []

rustc-dep-of-std = ["no-std", "hashbrown/rustc-dep-of-std"]
