[package]
name = "virtio-gpu"
version = "0.1.0"
authors = ["Jeremy Davis <jeremydavis519@gmail.com>"]
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bitflags = "1.2"

libdriver = { path = "../../libdriver" }
libphoenix = { path = "../../../libphoenix" }
virtio = { path = "../../virtio" }
