[package]
name = "phoenix-kernel-collections"
version = "0.1.0"
authors = ["Jeremy Davis <jeremydavis519@gmail.com>"]
edition = "2018"

[lib]
name = "collections"

[dependencies]
phoenix-kernel-locks = { path = "../locks" }
phoenix-kernel-tagged-ptr = { path = "../tagged-ptr" }

[features]
self-test = []
unit-test = []
