[package]
name = "phoenix-kernel-devices"
version = "0.1.0"
authors = ["jeremydavis519 <jeremydavis519@gmail.com>"]
edition = "2018"

[lib]
name = "devices"

[dependencies]
bitflags = "1.0"
volatile = "0.2"

phoenix-kernel-error = { path = "../error" }
phoenix-kernel-i18n = { path = "../i18n" }
phoenix-kernel-memory = { path = "../memory" }
phoenix-kernel-shared = { path = "../shared" }

[features]
self-test = []
unit-test = []
