[package]
name = "phoenix-kernel-devices"
version = "0.1.0"
authors = ["jeremydavis519 <jeremydavis519@gmail.com>"]
edition = "2018"

[lib]
name = "devices"

[dependencies]
phoenix-kernel-error = { path = "../error" }
phoenix-kernel-i18n = { path = "../i18n" }
phoenix-kernel-memory = { path = "../memory" }
phoenix-kernel-shared = { path = "../shared" }
phoenix-kernel-userspace = { path = "../userspace" }

[features]
self-test = []
unit-test = []
