[package]
name = "phoenix-kernel-exec"
version = "0.1.0"
authors = ["Jeremy Davis <jeremydavis519@gmail.com>"]
edition = "2018"

[lib]
name = "exec"

[dependencies]
bitflags = "1.0"

phoenix-kernel-error = { path = "../error" }
phoenix-kernel-fs = { path = "../fs" }
phoenix-kernel-i18n = { path = "../i18n" }
phoenix-kernel-io = { path = "../io" }
phoenix-kernel-locks = { path = "../locks" }
phoenix-kernel-memory = { path = "../memory" }
phoenix-kernel-shared = { path = "../shared" }

[features]
self-test = []
unit-test = []
