[package]
name = "phoenix-kernel-irqs"
version = "0.1.0"
authors = ["Jeremy Davis <jeremydavis519@gmail.com>"]
edition = "2018"

[lib]
name = "irqs"

[dependencies]
bitflags = "1.0"
volatile = "0.2"

phoenix-kernel-i18n = { path = "../i18n" }
phoenix-kernel-io = { path = "../io" }
phoenix-kernel-memory = { path = "../memory" }
phoenix-kernel-shared = { path = "../shared" }

[features]
self-test = []
unit-test = []
