[package]
name = "phoenix-kernel-scheduler"
version = "0.1.0"
authors = ["Jeremy Davis <jeremydavis519@gmail.com>"]
edition = "2018"

[lib]
name = "scheduler"

[dependencies]
phoenix-kernel-collections = { path = "../collections" }
phoenix-kernel-exec = { path = "../exec" }
phoenix-kernel-fs = { path = "../fs" }
phoenix-kernel-io = { path = "../io" }
phoenix-kernel-locks = { path = "../locks" }
phoenix-kernel-memory = { path = "../memory" }
phoenix-kernel-shared = { path = "../shared" }
phoenix-kernel-time = { path = "../time" }
phoenix-kernel-timers = { path = "../timers" }

[features]
self-test = []
unit-test = []
